--- a/demo-webrtc/pom.xml
+++ b/demo-webrtc/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.hunghung</groupId>
 	<artifactId>demo-webrtc</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>demo-webrtc</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
